--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ a {
   font-size: 12px;
   color: currentColor;
   line-height: 1.333;
-  letter-spacing: 4%;
+  letter-spacing: 0.04em;
   text-decoration: none;
 }
 
@@ -510,7 +510,7 @@ text-align: center;
   font-size: 16px;
   color: var(--iris);
   cursor: pointer;
-  letter-spacing: 4%;
+  letter-spacing: 0.04em;
   background: var(--cloud);
   padding: 12px 24px;
   border-radius: 4px;
@@ -980,7 +980,7 @@ margin-top: 8px;
   background-color: var(--cornflower);
   border-radius: 50%;
   border: solid 1px rgba(0, 0, 0, 0.1);
-  color: var(var(--navy-blue));
+  color: var(--navy-blue);
   transition-property: background-color, color, border;
   transition-duration: 300ms;
   transition-timing-function: cubic-bezier(0.42, 0, 0.21, 1.5);
@@ -1149,7 +1149,7 @@ input[type="checkbox"]:checked + .modal-form-argeement-desc .modal-form-argeemen
   padding: 80px 35px 40px 40px;
   display: flex;
   flex-direction: column;
-  background-color: rgb(var(--white));
+  background-color: rgba(var(--white));
   z-index: 9999;
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
