--- a/css/styles.css
+++ b/css/styles.css
@@ -1149,7 +1149,7 @@ input[type="checkbox"]:checked + .modal-form-argeement-desc .modal-form-argeemen
   padding: 80px 35px 40px 40px;
   display: flex;
   flex-direction: column;
-  background-color: rgba(var(--white));
+  background-color: rgb(var(--white));
   z-index: 9999;
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
