Final comments fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -102,6 +102,7 @@ text-transform: capitalize;
   .container {
     max-width: 768px;
     padding: 0 16px;
+    margin: 0 auto;
   } 
 }
 @media only screen and (min-width: 1158px) {
@@ -149,9 +150,20 @@ button {
   gap: 40px;
   align-items: center;
 }
+@media only screen and (min-width: 1158px) {
+  .header-menu-list {
+    margin-left: 76px;
+    margin-right: auto;
+  }
+}
 .header {
   z-index: 1; 
   padding: 25px 0;
+}
+@media only screen and (min-width: 768px){
+  .header {
+    padding: 0;
+  }
 }
 .header.is-hidden {
   transform: translateY(-100%);
@@ -167,7 +179,7 @@ button {
 }
 @media only screen and (min-width: 768px){
   .header .container{
-    margin: 0 16px;
+    margin: 0 auto;
   }
 }
 .navigation {
@@ -177,6 +189,9 @@ button {
   align-items: center;
 }
 @media only screen and (min-width: 1158px) {
+  .navigation {
+    justify-content: none;
+  }
 }
 @media only screen and (min-width: 1158px) {
   .header-menu-adress{
@@ -188,7 +203,7 @@ button {
 
 @media only screen and (max-width: 767px){
 .navigation .logo{
-  padding: 25px 0;
+  /*padding: 25px 0;*/
   }
 }
 @media only screen and (min-width: 1158px) {
@@ -296,9 +311,9 @@ button {
 .header-title {
   font-weight: 700;
   font-size: 36px;
-  margin-bottom: 72px;
   max-width: 288px;
-  margin: auto;
+  text-align: center;
+  margin: 0 auto 72px;
 }
 .hero .container{
   max-width: 396px; 
@@ -434,6 +449,7 @@ button {
 /* #region What are we doing*/
 .what-are-we {
   display: none;
+  padding-bottom: 120px;
 }
 @media (min-width: 1158px) {
   .what-are-we {
@@ -756,7 +772,6 @@ margin-top: 8px;
 .footer .container{
   display: flex;
   flex-direction: column;
-  justify-content: center;
   row-gap:72px;
   
   /*align-items: baseline;*/
